# Pake

./: ATTRIBUTION.md  README.md
.github/workflows/: release-appforge.yml
gui/: index.html  package.json
gui/src/: App.tsx  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
